--- a/page7.html
+++ b/page7.html
@@ -39,7 +39,7 @@
             <div class="navbar-brand">
                 <span class="navbar-logo">
                     <a href="https://mobirise.com">
-                         <img src="assets/images/neweralogo-122x1220.jpg" alt="Mobirise" title="" style="height: 3.8rem;">
+                         <img src="assets/images/neweralogo-122x1221.jpg" alt="Mobirise" title="" style="height: 3.8rem;">
                     </a>
                 </span>
                 <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="index.html#header2-1">
@@ -59,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/e">how to make your own site</a></section><section class="mbr-section content5 cid-r8guATtj5Y" id="content5-2b">
+<section class="engine"><a href="https://mobirise.info/f">easy site maker</a></section><section class="mbr-section content5 cid-r8guATtj5Y" id="content5-2b">
 
     
 
