--- a/page3.html
+++ b/page3.html
@@ -39,7 +39,7 @@
             <div class="navbar-brand">
                 <span class="navbar-logo">
                     <a href="https://mobirise.com">
-                         <img src="assets/images/neweralogo-122x1220.jpg" alt="Mobirise" title="" style="height: 3.8rem;">
+                         <img src="assets/images/neweralogo-122x1221.jpg" alt="Mobirise" title="" style="height: 3.8rem;">
                     </a>
                 </span>
                 <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="index.html#header2-1">
@@ -59,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/h">how to create a web page for free</a></section><section class="mbr-section content5 cid-r8goYpRETO" id="content5-26">
+<section class="engine"><a href="https://mobirise.info/k">develop free website</a></section><section class="mbr-section content5 cid-r8goYpRETO" id="content5-26">
 
     
 
