--- a/page9.html
+++ b/page9.html
@@ -39,7 +39,7 @@
             <div class="navbar-brand">
                 <span class="navbar-logo">
                     <a href="https://mobirise.com">
-                         <img src="assets/images/neweralogo-122x1220.jpg" alt="Mobirise" title="" style="height: 3.8rem;">
+                         <img src="assets/images/neweralogo-122x1221.jpg" alt="Mobirise" title="" style="height: 3.8rem;">
                     </a>
                 </span>
                 <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="index.html#header2-1">
@@ -59,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/i">website creation software</a></section><section class="mbr-section content5 cid-r8nvq8iZ53" id="content5-3r">
+<section class="engine"><a href="https://mobirise.info/r">bootstrap template</a></section><section class="mbr-section content5 cid-r8nvq8iZ53" id="content5-3r">
 
     
 
