--- a/page4.html
+++ b/page4.html
@@ -39,8 +39,8 @@
         <div class="menu-logo">
             <div class="navbar-brand">
                 <span class="navbar-logo">
-                    <a href="https://mobirise.com">
-                         <img src="assets/images/neweralogo-122x1220.jpg" alt="Mobirise" title="" style="height: 3.8rem;">
+                    <a href="#top">
+                         <img src="assets/images/neweralogo-122x122.jpg" alt="Mobirise" title="" style="height: 3.8rem;">
                     </a>
                 </span>
                 <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="index.html#slider1-2l">
@@ -60,7 +60,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/c">web builder</a></section><section class="header1 cid-r8n6cnW1Vt mbr-parallax-background" id="header1-35">
+<section class="engine"><a href="https://mobirise.info/x">free css templates</a></section><section class="header1 cid-r8n6cnW1Vt mbr-parallax-background" id="header1-35">
 
     
 
