--- a/page7.html
+++ b/page7.html
@@ -59,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/q">responsive site templates</a></section><section class="mbr-section content5 cid-r8guATtj5Y" id="content5-2b">
+<section class="engine"><a href="https://mobirise.info/f">simple site maker</a></section><section class="mbr-section content5 cid-r8guATtj5Y" id="content5-2b">
 
     
 
