--- a/index.html
+++ b/index.html
@@ -23,6 +23,28 @@
   
 </head>
 <body>
+
+<!-- Google Analytics -->
+<!-- Facebook Pixel Code -->
+<script>
+  !function(f,b,e,v,n,t,s)
+  {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+  n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+  if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+  n.queue=[];t=b.createElement(e);t.async=!0;
+  t.src=v;s=b.getElementsByTagName(e)[0];
+  s.parentNode.insertBefore(t,s)}(window, document,'script',
+  'https://connect.facebook.net/en_US/fbevents.js');
+  fbq('init', '330626617729858');
+  fbq('track', 'PageView');
+</script>
+<noscript><img height="1" width="1" style="display:none"
+  src="https://www.facebook.com/tr?id=330626617729858&ev=PageView&noscript=1"
+/></noscript>
+<!-- End Facebook Pixel Code -->
+<!-- /Google Analytics -->
+
+
   <section class="menu cid-qTkzRZLJNu" once="menu" id="menu1-0">
 
     
@@ -39,7 +61,7 @@
         <div class="menu-logo">
             <div class="navbar-brand">
                 <span class="navbar-logo">
-                    <a href="index.html#slider1-2l">
+                    <a href="index.html">
                          <img src="assets/images/neweralogo-122x122.jpg" alt="Mobirise" title="" style="height: 3.8rem;">
                     </a>
                 </span>
@@ -60,7 +82,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/a">online site builder</a></section><section class="carousel slide cid-r8miItMsaW" data-interval="false" id="slider1-2l">
+<section class="engine"><a href="https://mobirise.info/l">free site templates</a></section><section class="carousel slide cid-r8miItMsaW" data-interval="false" id="slider1-2l">
 
     
 
