create github pages

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/v">free html templates</a></section><section class="carousel slide cid-r8miItMsaW" data-interval="false" id="slider1-2l" data-sortbtn="btn-primary">
+<section class="engine"><a href="https://mobirise.info/u">bootstrap responsive templates</a></section><section class="carousel slide cid-r8miItMsaW" data-interval="false" id="slider1-2l" data-sortbtn="btn-primary">
 
     
 
@@ -154,7 +154,7 @@
             <div class="card p-3 col-12 col-md-6 my-col">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <a href="page6.html#content5-29"><img src="assets/images/17-496x274.png" alt="Mobirise" title=""></a>
+                        <a href="page6.html#content5-29"><img src="assets/images/18-479x322.png" alt="Mobirise" title=""></a>
                     </div>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">
@@ -180,7 +180,7 @@
             <div class="card p-3 col-12 col-md-6 my-col">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <a href="page8.html#content5-2z"><img src="assets/images/metal-buildings-4-686x515.jpg" alt="Mobirise" title=""></a>
+                        <a href="page8.html#content5-2z"><img src="assets/images/21055967-1966989276849946-864577011188162048-o-686x515.jpg" alt="Mobirise" title=""></a>
                     </div>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">
@@ -193,7 +193,7 @@
             <div class="card p-3 col-12 col-md-6 my-col">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <a href="page9.html#content5-3r"><img src="assets/images/barns-686x390.jpg" alt="Mobirise" title=""></a>
+                        <a href="page9.html#content5-3r"><img src="assets/images/22555566-1994135690801971-1683782095752583237-o-686x371.jpg" alt="Mobirise" title=""></a>
                     </div>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">Barns &amp; Agricultural Buildings</h4>
