--- a/page10.html
+++ b/page10.html
@@ -82,7 +82,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/t">amp templates</a></section><section class="header9 cid-rbp7rm44Ax mbr-parallax-background" id="header9-3m">
+<section class="engine"><a href="https://mobirise.info/q">responsive website templates</a></section><section class="header9 cid-rbp7rm44Ax mbr-parallax-background" id="header9-3m">
 
     
 
