create github pages

--- a/page12.html
+++ b/page12.html
@@ -82,7 +82,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/l">free website templates</a></section><section class="cid-rpOpa1PRW2 mbr-fullscreen" id="header2-47" data-sortbtn="btn-primary">
+<section class="engine"><a href="https://mobirise.info/m">web design templates</a></section><section class="cid-rpOpa1PRW2 mbr-fullscreen" id="header2-47" data-sortbtn="btn-primary">
 
     
 
@@ -154,7 +154,7 @@
 <br>CERTIFIED STRUCTURES
 <br>14gauge sq tubing or 12gauge sq tubing 
 <br>29gauge sheet metal 
-<br>PRICE $11,500 (+ tax)
+<br>PRICE $12,500 (+ tax)
 <br>Down Payment $500<br>Down Payment is required to process order!
 <br>WE DON'T DO ANY GROUND WORK!!
 <br>SE HABLA ESPANOL<br></p>
