create github pages

--- a/page12.html
+++ b/page12.html
@@ -82,7 +82,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/m">web design templates</a></section><section class="cid-rpOpa1PRW2 mbr-fullscreen" id="header2-47" data-sortbtn="btn-primary">
+<section class="engine"><a href="https://mobirise.info/p">site templates free download</a></section><section class="cid-rpOpa1PRW2 mbr-fullscreen" id="header2-47" data-sortbtn="btn-primary">
 
     
 
@@ -152,8 +152,7 @@
 <br>2)Windows 
 <br>1)Walk-in Door (36" x 80")
 <br>CERTIFIED STRUCTURES
-<br>14gauge sq tubing or 12gauge sq tubing 
-<br>29gauge sheet metal 
+<br>14gauge sq tubing&nbsp;<br>29gauge sheet metal 
 <br>PRICE $12,500 (+ tax)
 <br>Down Payment $500<br>Down Payment is required to process order!
 <br>WE DON'T DO ANY GROUND WORK!!
@@ -175,8 +174,7 @@
 <br>2)10x10 Roll-up Doors 
 <br>1) Walk-in Door 
 <br>CERTIFIED STRUCTURES
-<br>14gauge sq tubing or 12gauge sq tubing 
-<br>29gauge sheet metal 
+<br>14gauge sq tubing &nbsp;<br>29gauge sheet metal 
 <br>PRICE $13,000 (+ tax)
 <br>Down Payment $500&nbsp;<br>Down Payment is required to process order!
 <br>WE DON'T DO ANY GROUND WORK!!
