create github pages

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/i">website creation software</a></section><section class="carousel slide cid-r8miItMsaW" data-interval="false" id="slider1-2l">
+<section class="engine"><a href="https://mobirise.info/n">simple site templates</a></section><section class="carousel slide cid-r8miItMsaW" data-interval="false" id="slider1-2l">
 
     
 
